# tai-storage-local

./: CHANGELOG.md  CONTRIBUTING.md  NOTICE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
src/tai42_storage_local/: __init__.py  driver.py  settings.py  storage.py  tai-plugin.yml
src/tai_storage_local/: __init__.py  settings.py  storage.py  tai-plugin.yml
tests/: conftest.py  test_driver.py  test_import_graph.py  test_plugin_spec.py  test_storage.py
