[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tai-storage-local"
version = "0.1.0"
description = "Local-filesystem storage backend for the TAI ecosystem: a manifest-loaded Storage plugin serving text and binary content from a directory tree."
readme = "README.md"
requires-python = ">=3.13"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [
    { name = "tai42", email = "oss@tai42.ai" },
]
keywords = ["tai", "storage", "filesystem", "local", "content", "mcp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
dependencies = [
    # The pure interface contract this backend registers through (the global
    # tai_app handle, the Storage base, the assert_not_root guard, ObjectStat).
    "tai-contract>=0.1,<0.2",
    # Leaf helpers: the settings base class and the settings-cache decorator.
    "tai-kit>=0.1,<0.2",
    # Async file I/O for the driver's non-blocking reads/writes.
    "aiofiles>=24",
    # The settings config type used by the backend's settings class.
    "pydantic-settings>=2.11",
]

[project.urls]
Homepage = "https://tai42.ai"
Repository = "https://github.com/tai42ai/tai-storage-local"
Issues = "https://github.com/tai42ai/tai-storage-local/issues"
Changelog = "https://github.com/tai42ai/tai-storage-local/blob/main/CHANGELOG.md"

[dependency-groups]
# Dev/test tooling, installed by default on `uv sync` (PEP 735 group).
dev = [
    "pytest>=8",
    "pytest-asyncio>=1.3",
    "pytest-cov>=5",
    "ruff>=0.6",
    "pyright>=1.1.389",
    # The plugin-spec test parses tai-plugin.yml.
    "pyyaml>=6",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["tai_storage_local*"]

[tool.setuptools.package-data]
tai_storage_local = ["py.typed", "tai-plugin.yml"]

[tool.uv]
cache-keys = [{ file = "pyproject.toml" }]

# Dev-only: resolve the sibling foundation packages from local editable checkouts
# so changes there are picked up without a reinstall. The published version floors
# in [project].dependencies are what the shipped wheel declares; these source
# overrides are not part of wheel metadata. The skeleton is deliberately NOT a
# dependency — a storage backend is contract-facing and never imports it.
[tool.uv.sources]
tai-contract = { path = "../tai-contract", editable = true }
tai-kit = { path = "../tai-kit", editable = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
xfail_strict = true
# Turn warnings into errors so a real defect that only surfaces as a warning
# (e.g. a missing await -> "coroutine was never awaited") fails the suite loudly
# instead of passing green.
filterwarnings = ["error"]

[tool.coverage.run]
source = ["tai_storage_local"]

[tool.coverage.report]
fail_under = 100

[tool.ruff]
src = ["src"]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "C4", "SIM", "PIE", "PT", "RUF", "TID"]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"tai_skeleton".msg = "A storage backend is contract-facing: it never imports tai-skeleton."

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.13"
typeCheckingMode = "basic"
